tests/semantic/invalid/initializer_cascade.mc
int value = true + 1;
print value;
